--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,23 +9,22 @@
 	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_gravity="center"
 		android:orientation="vertical">
 
 		<TextView
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
+			android:layout_marginTop="32dp"
 			android:gravity="center"
-			android:text="@string/api_1"
-			android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
+			android:text="@string/api_19"
+			android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
-		<io.github.rakshakhegde.diffre.DiffreViewApi1
-			android:id="@+id/fillShapeViewApi1"
+		<io.github.rakshakhegde.diffre.DiffreView
+			android:id="@+id/fillShapeView"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_gravity="center"
-			android:layout_marginTop="8dp"
-			android:layerType="software"/>
+			android:layout_marginTop="8dp"/>
 	</LinearLayout>
 
 	<SeekBar
