--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,22 +17,25 @@
 			android:layout_marginTop="32dp"
 			android:gravity="center"
 			android:text="@string/api_19"
-			android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+			android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+			android:textSize="24sp" />
 
 		<io.github.rakshakhegde.diffre.DiffreView
 			android:id="@+id/fillShapeView"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_gravity="center"
-			android:layout_marginTop="8dp"/>
-	</LinearLayout>
+			android:layout_marginTop="32dp"/>
 
-	<SeekBar
-		android:id="@+id/seekBar"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:layout_gravity="bottom"
-		android:padding="32dp"
-		android:progress="60"/>
+		<SeekBar
+			android:id="@+id/seekBar"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_gravity="bottom"
+			android:layout_marginTop="80dp"
+			android:layout_marginLeft="16dp"
+			android:layout_marginRight="16dp"
+			android:progress="60"/>
+	</LinearLayout>
 
 </FrameLayout>
